first update for bot removed default client and added required file

--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "chat-example",
-  "version": "0.0.0",
-  "description": "A chat example to showcase how to use `socket.io` with a static `express` server with `async` for control flow.",
+  "name": "myu-faq-bot",
+  "version": "0.0.1",
+  "description": "A chat to showcase the faq chat bot.",
   "main": "server.js",
   "repository": "",
-  "author": "Mostafa Eweda <mo.eweda@gmail.com>",
+  "author": "pandu",
   "dependencies": {
-    "async": "~0.2.8",
-    "express": "~3.2.4",
-    "socket.io": "~0.9.14"
+    "botbuilder": "^3.2.3",
+    "restify": "^4.1.1"  
   }
 }
